refactor(core): apply targeted Java 11 string cleanup
- Replace trim-based blank text detection with String.isBlank
- Keep parser numeric trimming unchanged to avoid semantic drift
- Verify the test suite with JDK 11

Signed-off-by: Yes, Bob <verils@qq.com>